Copilot: instructions etter standard template